--- a/Last-serverless-functions.adoc
+++ b/Last-serverless-functions.adoc
@@ -12,7 +12,7 @@ To create Knative functions on your workstation, you need the following:
 
 `kn func` CLI is an important element that helps implementing serverless functions.
 It can generate function projects from pre-defined set of templates that generate function projects from boilerplates. 
-These project templates are available for a variety of languages such as Node.js, Quarkus, Python, Go etc.
+These project templates are available for a variety of languages such as Node.js, Quarkus, Python, Go, etc.
 It also allows you to select the invocation format of the function from two choices—HTTP and CloudEvent, HTTP being the default. 
 These templates depend on language-specific frameworks. 
 When HTTP invocation format is selected, it handles the HTTP invocation procedure.  
