--- a/Last-serverless-functions.adoc
+++ b/Last-serverless-functions.adoc
@@ -62,8 +62,8 @@ For more information on all available flags for this command, execute `kn func c
 ====
 
 Running the `kn func create` command creates a serverless function project, having `func.yaml` configuration file. 
-This file handles the build and deployment procedures of the function when using  `kn func` commands afterwards. 
-The `kn func` commands handles updating this file, hence, unless a specific customization is needed, it is not needed to be modified manually.
+This file handles the build and deployment procedures of the function when using  `kn func` commands afterward. 
+The `kn func` commands handle updating this file, hence, unless a specific customization is needed, it does not need to be modified manually.
 
 The following example highlights some important fields of the `func.yaml` file:
 
