--- a/Som-fixes-installation.adoc
+++ b/Som-fixes-installation.adoc
@@ -277,7 +277,7 @@ Then, execute the following command to apply the changes:
 [source,bash]
 kubectl apply -f knative-serving.yaml
 
-Afterwards, retrieve the External IP address or Canonical Name (CNAME):
+Finally, retrieve the External IP address or Canonical Name (CNAME):
 [source,bash]
 kubectl --namespace knative-serving get service kourier
 
@@ -287,8 +287,8 @@ NAME      TYPE           CLUSTER-IP       EXTERNAL-IP      PORT(S)              
 kourier   LoadBalancer   10.101.101.116   10.101.101.116   80:30864/TCP,443:31928/TCP   35h
 
 
-== Validating the installation
-Finally, after running the pervious steps that installs the Knative Serving Custom Resource and configuring the network layer, confirm Knative serving deployment. 
+=== Validate the deployment of Knative Serving
+After running the pervious steps that installs the Knative Serving Custom Resource and configuring the network layer, confirm Knative serving deployment. 
 Upon successful deployment, all deployments are displayed to be ready:
 [source,bash]
 kubectl get deployment -n knative-serving
