--- a/Som-fixes-installation.adoc
+++ b/Som-fixes-installation.adoc
@@ -1,3 +1,6 @@
+:operator-release: 1.12.0
+
+
 = Install by using the Knative Operator
 
 The Knative project provides several options for installing the components such as YAML files, or operators.
